--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,9 +68,9 @@
 			</div>
 		</section>		
 	</div>
-	<%= render :partial => 'layouts/footer' %>
-	<div class="slboard_overlay" id="overlay"></div>
-	<div class="modal fade" id="myModal" tabindex="-1" role="dialog"></div>
-	<%= javascript_include_tag @script, "data-turbolinks-track" => true %>
+<%= render :partial => 'layouts/footer' %>
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
+<%= javascript_include_tag @script, "data-turbolinks-track" => true %>
+</body>
 </body>
 </html>
