--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,4 @@
+@charset "utf-8";
 //= require fancybox
 
 @import "bootstrap-sprockets";
@@ -8,6 +9,7 @@
     src: local('☺'),url('../fonts/NanumGothic-Regular.eot?#iefix') format('embedded-opentype'),url('../fonts/NanumGothic-Regular.woff') format('woff');
 }
 
+/* default */
 html,body {margin:0;padding:0;height: 100%}
 body { font-family: "Nanum Gothic","나눔고딕","Malgun Gothic","맑은 고딕","굴림",gulim,"돋움",Dotum,Arial,Helvetica, sans-serif;color:#333}
 label {vertical-align:middle;cursor:pointer}
@@ -72,11 +74,11 @@ header nav a { float: left; color: #333; font-size:1.3em; text-decoration: none}
 header nav a:hover {color:#000}
 header nav a:visited {color:#666}
 header nav a:active {color:red}
-header nav ul li ul {position:absolute;display:none}	
+header nav ul li ul {position:absolute;display:none}
 header #top_menu {position:absolute;right:10px;top:5px;margin:0;padding:0;list-style:none;z-index:9999}
 header #top_menu li {float:left;margin:0 15px 0 0;padding:0}
 
-/* aside */ 
+/* aside */
 aside {float:right;width:350px;margin:0}
 aside .box {margin-top:0}
 
@@ -126,7 +128,7 @@ footer address {margin-top:10px }
 #sl_main_gallery .carousel-indicators {bottom:-40px}
 #sl_main_gallery .carousel-indicators li {border-color:#ccc}
 #sl_main_gallery .carousel-indicators .active {background:#ccc}
-#sl_main_gallery.sl_main_list .carousel-control.left,#sl_main_gallery.sl_main_list .carousel-control.right {margin-top:40px} 
+#sl_main_gallery.sl_main_list .carousel-control.left,#sl_main_gallery.sl_main_list .carousel-control.right {margin-top:40px}
 
 /* portfolio */
 #sl_portfolio_index .media {border-bottom:1px dotted #ccc;padding-bottom:10px;margin-bottom:20px}
@@ -142,7 +144,7 @@ footer address {margin-top:10px }
 #main_main article {position:relative;float:left;width:100%;margin:0 0 3em;padding:0px}
 #main_main article h3 {float:left;width:100%;margin:0 0 1em;padding:0.5em 0;border-bottom:1px solid #ccc}
 #main_main a.more {position:absolute;top:0.5em;right:0;color:#999}
-#main_main .section_main2 article {margin-right:30px;width:220px} 
+#main_main .section_main2 article {margin-right:30px;width:220px}
 #main_main .section_main2 .article3 {float:right;margin-right:0}
 #main_main .section_main2 article ul {margin:0;padding:0;list-style:none}
 #main_main .section_main2 article li {margin:0.3em;padding:0}
@@ -296,7 +298,7 @@ a.left:active {background-position: -60px 0}
 	header {background:none;border-bottom:0;margin:1% 0}
 	header h1 {margin:2%;padding:0;font-size:1.6em}
 	header h1 a {float:left;background:none;text-indent:0;width:100%;font-weight:bold}
-	header h1 a:hover {text-decoration:none}  
+	header h1 a:hover {text-decoration:none}
 	header h1 a:active {color:red}
 	header nav.container {width:100%;margin:0;padding:0}
 	header nav ul {width:100%;margin:2% 0 0;padding:0;background:#fff;border-radius:5px}
@@ -314,9 +316,9 @@ a.left:active {background-position: -60px 0}
 	#sl_main_gallery .carousel-inner .item {}
 	.sub_main {clear:both;width:90%;margin:0 5%}
 	#sl_main_blog li {margin-bottom:10px}
-	#sl_main_blog li.m_nm {margin-right:0}	
+	#sl_main_blog li.m_nm {margin-right:0}
 	#main_main article ul {margin:0;padding:0;list-style:none}
-	#sl_intro_index #sl_intro_right {float:left;width:100%}  
+	#sl_intro_index #sl_intro_right {float:left;width:100%}
 	header nav ul a:hover {color:#000}
 	header nav ul a:active {color:red}
 	.page-header {float:left;margin:0 0 10px}
@@ -327,7 +329,7 @@ a.left:active {background-position: -60px 0}
 
 @media all and (min-width: 768px) and (max-width: 1024px) {
 	header {height:8em;background:#f8f8f8;border-bottom:1px solid #e7e7e7}
-	header nav ul li:first-child {margin-left:0}	
+	header nav ul li:first-child {margin-left:0}
 	#sl_intro_index #sl_intro_right dd {width:200px}
 	footer {height:5em;border-top:1px solid #e7e7e7}
 	#mom {margin:-8em 0 -5em;min-height:100%}
@@ -342,13 +344,12 @@ a.left:active {background-position: -60px 0}
 	#mom {margin:-6em 0 -5em;min-height:100%}
 	#main {padding-top:6em;padding-bottom:5em}
 	.ad_test {height:90px}
-	
+
 	/* tag */
 	.sl_content_tags h4 {float:left;margin:0 5px;padding:0;line-height:150%}
 	.sl_content_tags h4:after {content:' :'}
 	.sl_content_tags ul {float:left;margin:0;padding:0}
 	.sl_content_tags ul li {float:left;margin:0 0 0 5px;padding:0;list-style:none;line-height:150%}
 	.sl_content_tags ul li:after {content:','}
-	.sl_content_tags ul li:last-child:after {content:none}		
+	.sl_content_tags ul li:last-child:after {content:none}
 }
-
