--- a/app/views/notices/index.html.erb
+++ b/app/views/notices/index.html.erb
@@ -1,3 +1,4 @@
+<% breadcrumb :notices %>
 <div id="sl_notice_index">
 	<article class="table-responsive">
 		<table width="100%" cellpadding="0" cellspacing="0" class="table table-striped">
