수정함:        Gemfile.lock 	수정함:        app/models/program.rb 	수정함:        app/views/layouts/application.html.erb 	수정함:        db/migrate/20120516002154_create_devise_to_users.rb 	수정함:        db/migrate/20120522094638_create_blog_categories.rb 	수정함:        db/migrate/20161216002148_create_programs.rb 	수정함:        db/seeds.rb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
 	<div id="mom">
 		<section id="main" class="container">
 			<div class="row">
-				<% if(current_page?(root_path)) %>
+				<% if current_page?(root_path) %>
 				<div class="jumbotron hero-unit">
 					<h2><%=raw t(:home_main_title) %></h2>
 					<p class="lead"><%=raw t(:home_main_description) %></p>
