--- a/app/views/users/_data.html.erb
+++ b/app/views/users/_data.html.erb
@@ -1,6 +1,6 @@
 <span itemprop="author" itemscope itemtype="http://schema.org/Person">
   <% if user.alternate_name? %>
-  <span class="none" itemprop="name"><%= user.name %></span>  
+  <span class="none" itemprop="name"><%= user.name %></span>
   <span itemprop="alternateName"><%= user.alternate_name %></span>
   <% else %>
   <span itemprop="name"><%= user.name %></span>
@@ -11,8 +11,8 @@
   <% if user.birth_date? %>
   <span class="none" itemprop="birthDate" datetime="<%=user.birthdate %>"><%=user.birthdate %></span>
   <% end %>
-  <% if user.job_title? %>
-  <span class="none" itemprop="jobTitle"><%=user.job_title %></span>
+  <% if user.job? %>
+  <span class="none" itemprop="jobTitle"><%=user.job %></span>
   <% end %>
   <% if user.url? %>
   <span class="none" itemprop="url"><%=user.url %></span>
