수정함:        app/assets/stylesheets/application.scss 	수정함:        app/helpers/application_helper.rb 	수정함:        app/views/intro/index.html.erb 	수정함:        app/views/layouts/_aside.html.erb 	수정함:        app/views/layouts/_page_header.html.erb 	수정함:        app/views/layouts/application.html.erb

--- a/app/views/intro/index.html.erb
+++ b/app/views/intro/index.html.erb
@@ -1,13 +1,12 @@
 <% breadcrumb :intro %>
-<div id="sl_intro_index">
+<section id="sl_intro_index">
 	<article id="intro_main_content" itemscope itemtype="http://schema.org/Person">
-
-		<div id="sl_intro_left">
+		<div id="sl_intro_left" class="col-sm-12 col-md-6">
 			<a href="http://slboard.cdn3.cafe24.com/intro_photo
 /photo/1/sl.jpg" class="simple_image" title="" itemprop="image"><img src="http://slboard.cdn3.cafe24.com/intro_photo
 /photo/1/large_thumb_sl.jpg" class="img-responsive" alt=""/></a>
 		</div>
-		<div id="sl_intro_right">
+		<div id="sl_intro_right" class="col-sm-12 col-md-6">
 			<h3>잠자는사자 극비 신상공개!!!</h3>
 			<dl>
 				<dt>이름</dt>
@@ -36,4 +35,4 @@
 			<span class="none" itemprop="url">1</span>
 		</div>
 	</article>
-</div>
+</section>
