--- a/app/views/layouts/_aside.html.erb
+++ b/app/views/layouts/_aside.html.erb
@@ -1,4 +1,4 @@
-<aside class="visible-lg">
+<aside class="visible-lg visible-xl pull-right col-lg-4">
   <%= render :partial => 'blog_categories/aside' %>
 	<% unless @tags.empty? %>
 	<%= render :partial => 'blogs/tag_cloud' %>
