--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,10 +22,10 @@ a:active {color:red}
 a:hover{color:#333;text-decoration:underline;}
 a img {border:none}
 
-h1 {font-size :160%}
-h2 {font-size :140%}
-h3 {font-size :120%}
-h4,h5,h6 {font-size : 100%}
+h1 {font-size :180%}
+h2 {font-size :150%}
+h3 {font-size :130%}
+h4,h5,h6 {font-size : 110%}
 
 /* Getting the new tags to behave */
 article, aside, audio, canvas, command, datalist, details, embed, figcaption, figure, footer, header, hgroup, keygen, meter, nav, output, progress, section, source, video {display:block;}
@@ -35,9 +35,8 @@ mark, rp, rt, ruby, summary, time {display:inline;}
 footer {clear:both;float:left;width:80%;margin:0 10%;color:#666;text-align: center}
 footer div {margin:0.3em 0 0}
 #mom {clear:both;float:left;width:100%;padding:0}
-.sub_main {float:left;width:728px;margin:0 auto;padding:0}
 .page-header {float:left;width:100%}
-.page-header h2 {float:left;margin:0.7em 0 0;padding:0;font-weight:bold;color:#666}
+.page-header h2 {float:left;margin-bottom:0;font-weight:bold;color:#666}
 .page-header .breadcrumb  {float:right;margin:0}
 .alert-success {clear:both}
 #sl_ad {clear:both;margin-bottom:10px}
@@ -64,7 +63,7 @@ footer div {margin:0.3em 0 0}
 
 /* header */
 header {position:relative}
-header h1 {float:left;margin:1.5em 0 0;padding:0}
+header h1 {float:left;margin:1.2em 0 0;padding:0}
 header h1 a:active {color:red}
 header nav { position: relative; z-index: 999; margin:0; padding:0}
 header nav ul { float: right; margin: 1.5em 0 0 0; padding: 0}
@@ -79,8 +78,6 @@ header #top_menu {position:absolute;right:10px;top:5px;margin:0;padding:0;list-s
 header #top_menu li {float:left;margin:0 15px 0 0;padding:0}
 
 /* aside */
-aside {float:right;width:350px;margin:0}
-aside .box {margin-top:0}
 
 #tags ul {margin:0;padding:0;list-style:none}
 #tags ul li {float:left;margin:0 10px}
@@ -100,10 +97,10 @@ footer address {margin-top:10px }
 #sl_intro_index h3 {margin-bottom:40px;text-indent:0}
 #sl_intro_index #intro_main_content {float:left;width:100%;margin:0 0 20px}
 #sl_intro_index #sl_intro_left {float:left;width:400px}
-#sl_intro_index #sl_intro_right {float:right;margin:0 0 0 20px;position:relative;width:300px}
+#sl_intro_index #sl_intro_right {float:right;position:relative}
 #sl_intro_index #sl_intro_right dl {float:left;width:100%;margin:0 0 10px;padding:0}
 #sl_intro_index #sl_intro_right dt {clear:both;float:left;margin:5px 0;width:100px;}
-#sl_intro_index #sl_intro_right dd {float:left;margin:5px 0;width:200px}
+#sl_intro_index #sl_intro_right dd {float:left;margin:5px 0}
 #sl_intro_index article {margin-bottom:2em;line-height:150%}
 #sl_intro_index article h2 {margin:0 0 1em;padding:0.5em 0;border-bottom:1px dotted #ccc}
 #sl_intro_index #main_content a {clear:both;display:block}
@@ -316,14 +313,13 @@ a.left:active {background-position: -60px 0}
 	#main {float:left;margin:0;padding:0;width:100%;padding:3%;border-radius:5px;background:#fff;}
 	#sl_main_gallery .carousel-inner a.m_nm {margin-right:0}
 	#sl_main_gallery .carousel-inner .item {}
-	.sub_main {clear:both;width:90%;margin:0 5%}
 	#sl_main_blog li {margin-bottom:10px}
 	#sl_main_blog li.m_nm {margin-right:0}
 	#main_main article ul {margin:0;padding:0;list-style:none}
 	#sl_intro_index #sl_intro_right {float:left;width:100%}
 	header nav ul a:hover {color:#000}
 	header nav ul a:active {color:red}
-	.page-header {float:left;margin:0 0 10px}
+	.page-header {float:left;margin-top:0;margin-bottom:10px}
 	#sl_intro_index #sl_intro_right, #sl_gallery_index #sl_gallery_right {width:100%;margin:0}
 	#sl_intro_index #sl_intro_left {width:100%}
 	footer {background:#fff;border-radius:5px;width:100%;margin:1% 0}
@@ -336,14 +332,13 @@ a.left:active {background-position: -60px 0}
 @media all and (min-width: 768px) and (max-width: 992px) {
 	header {height:8em;background:#f8f8f8;border-bottom:1px solid #e7e7e7}
 	header nav ul li:first-child {margin-left:0}
-	#sl_intro_index #sl_intro_right dd {width:200px}
 	footer {height:5em;border-top:1px solid #e7e7e7}
 	#mom {margin:-8em 0 -5em;min-height:100%}
 	#main {padding-top:6em;padding-bottom:5em}
 }
 
 @media all and (min-width: 992px) {
-
+  html,body {font-size:14px}
 }
 
 @media all and (min-width: 992px) and (max-width: 1200px) {
@@ -351,8 +346,9 @@ a.left:active {background-position: -60px 0}
 }
 
 @media all and (min-width: 1200px) {
+  html,body {font-size:16px}
 	header {height:6em;background:#f8f8f8;border-bottom:1px solid #e7e7e7}
-	#sl_intro_index #sl_intro_right dd {width:200px}
+  aside .box {margin-top:0}
 	footer {height:5em;border-top:1px solid #e7e7e7}
 	#mom {margin:-6em 0 -5em;min-height:100%}
 	#main {padding-top:6em;padding-bottom:5em}
@@ -368,6 +364,266 @@ a.left:active {background-position: -60px 0}
 }
 
 
-@media all and (min-width:1200px) {
+@media (min-width: 1200px) and (max-width: 1499px) {
 
+}
+
+@media (min-width: 1500px) {
+  html,body {font-size:18px}
+  .container {width:1500px}
+  .jumbotron {text-align: center}
+
+
+  .hidden-lg {
+      display: none !important;
+  }
+
+  .visible-xl-block,
+  .visible-xl-inline,
+  .visible-xl-inline-block,
+  .visible-xl{
+      display: none !important;
+  }
+
+
+
+    .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12 {
+        float: left;
+    }
+
+    .col-xl-12 {
+        width: 100%;
+    }
+
+    .col-xl-11 {
+        width: 91.66666667%;
+    }
+
+    .col-xl-10 {
+        width: 83.33333333%;
+    }
+
+    .col-xl-9 {
+        width: 75%;
+    }
+
+    .col-xl-8 {
+        width: 66.66666667%;
+    }
+
+    .col-xl-7 {
+        width: 58.33333333%;
+    }
+
+    .col-xl-6 {
+        width: 50%;
+    }
+
+    .col-xl-5 {
+        width: 41.66666667%;
+    }
+
+    .col-xl-4 {
+        width: 33.33333333%;
+    }
+
+    .col-xl-3 {
+        width: 25%;
+    }
+
+    .col-xl-2 {
+        width: 16.66666667%;
+    }
+
+    .col-xl-1 {
+        width: 8.33333333%;
+    }
+
+    .col-xl-pull-12 {
+        right: 100%;
+    }
+
+    .col-xl-pull-11 {
+        right: 91.66666667%;
+    }
+
+    .col-xl-pull-10 {
+        right: 83.33333333%;
+    }
+
+    .col-xl-pull-9 {
+        right: 75%;
+    }
+
+    .col-xl-pull-8 {
+        right: 66.66666667%;
+    }
+
+    .col-xl-pull-7 {
+        right: 58.33333333%;
+    }
+
+    .col-xl-pull-6 {
+        right: 50%;
+    }
+
+    .col-xl-pull-5 {
+        right: 41.66666667%;
+    }
+
+    .col-xl-pull-4 {
+        right: 33.33333333%;
+    }
+
+    .col-xl-pull-3 {
+        right: 25%;
+    }
+
+    .col-xl-pull-2 {
+        right: 16.66666667%;
+    }
+
+    .col-xl-pull-1 {
+        right: 8.33333333%;
+    }
+
+    .col-xl-pull-0 {
+        right: auto;
+    }
+
+    .col-xl-push-12 {
+        left: 100%;
+    }
+
+    .col-xl-push-11 {
+        left: 91.66666667%;
+    }
+
+    .col-xl-push-10 {
+        left: 83.33333333%;
+    }
+
+    .col-xl-push-9 {
+        left: 75%;
+    }
+
+    .col-xl-push-8 {
+        left: 66.66666667%;
+    }
+
+    .col-xl-push-7 {
+        left: 58.33333333%;
+    }
+
+    .col-xl-push-6 {
+        left: 50%;
+    }
+
+    .col-xl-push-5 {
+        left: 41.66666667%;
+    }
+
+    .col-xl-push-4 {
+        left: 33.33333333%;
+    }
+
+    .col-xl-push-3 {
+        left: 25%;
+    }
+
+    .col-xl-push-2 {
+        left: 16.66666667%;
+    }
+
+    .col-xl-push-1 {
+        left: 8.33333333%;
+    }
+
+    .col-xl-push-0 {
+        left: auto;
+    }
+
+    .col-xl-offset-12 {
+        margin-left: 100%;
+    }
+
+    .col-xl-offset-11 {
+        margin-left: 91.66666667%;
+    }
+
+    .col-xl-offset-10 {
+        margin-left: 83.33333333%;
+    }
+
+    .col-xl-offset-9 {
+        margin-left: 75%;
+    }
+
+    .col-xl-offset-8 {
+        margin-left: 66.66666667%;
+    }
+
+    .col-xl-offset-7 {
+        margin-left: 58.33333333%;
+    }
+
+    .col-xl-offset-6 {
+        margin-left: 50%;
+    }
+
+    .col-xl-offset-5 {
+        margin-left: 41.66666667%;
+    }
+
+    .col-xl-offset-4 {
+        margin-left: 33.33333333%;
+    }
+
+    .col-xl-offset-3 {
+        margin-left: 25%;
+    }
+
+    .col-xl-offset-2 {
+        margin-left: 16.66666667%;
+    }
+
+    .col-xl-offset-1 {
+        margin-left: 8.33333333%;
+    }
+
+    .col-xl-offset-0 {
+        margin-left: 0;
+    }
+
+    .visible-xl {
+        display: block !important;
+    }
+
+    table.visible-xl {
+        display: table;
+    }
+
+    tr.visible-xl {
+        display: table-row !important;
+    }
+
+    th.visible-xl, td.visible-xl {
+        display: table-cell !important;
+    }
+
+    .visible-xl-block {
+        display: block !important;
+    }
+
+    .visible-xl-inline {
+        display: inline !important;
+    }
+
+    .visible-xl-inline-block {
+        display: inline-block !important;
+    }
+
+    .hidden-xl {
+        display: none !important;
+    }
 }
