--- a/app/views/layouts/_page_header.html.erb
+++ b/app/views/layouts/_page_header.html.erb
@@ -1,4 +1,8 @@
-<div class="page-header" itemscope itemtype="http://schema.org/WebPage">
-	<h2 itemprop="mainContentOfPage" itemscope itemtype="http://schema.org/WebPageElement"><span itemprop="headline"><%=@controller_name %></span></h2>
-	<%= breadcrumbs :semantic=>true, style: :bootstrap %>
+<div class="row">
+	<div class="col-xs-12">
+		<div class="page-header" itemscope itemtype="http://schema.org/WebPage">
+			<h2 itemprop="mainContentOfPage" itemscope itemtype="http://schema.org/WebPageElement"><span itemprop="headline"><%=@controller_name %></span></h2>
+			<%= breadcrumbs :semantic=>true, style: :bootstrap %>
+		</div>
+	</div>
 </div>
