--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,9 +19,7 @@
 	<meta name="author" content="Sleeping-Lion">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="<%=asset_path 'favicon.ico' %>">
-	<noscript id="deferred-styles">
-		<%= stylesheet_link_tag "application", :media=>"all", "data-turbolinks-track" => true %>
-	</noscript>
+	<%= stylesheet_link_tag "application", :media=>"all", "data-turbolinks-track" => true %>
 	<%= csrf_meta_tags %>
 	<!--[if IE]>
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" />
@@ -31,34 +29,21 @@
 	<%= render :partial => 'layouts/header' %>
 	<div id="mom">
 		<section id="main" class="container">
-			<div class="row">
 				<% if current_page?(root_path) %>
 				<div class="jumbotron hero-unit">
 					<h2><%=raw t(:home_main_title) %></h2>
 					<p class="lead"><%=raw t(:home_main_description) %></p>
 					<%=link_to '깨끗한 웹을 꿈꾸고 있습니다','/home/popup',:class=>'modal_link btn btn-large btn-success',:'data-toggle'=>"modal",:'data-target'=>"#myModal" %>
-				</div>
+				</div
 				<hr class="none">
-				<div id="main_main" class="sub_main">
+				<div class="row">
+				<div class="sub_main col-xs-12 col-lg-8">
 				<% else %>
 				<%= render :partial => 'layouts/page_header' %>
-				<div class="sub_main">
+				<div class="row">
+				<div class="sub_main col-xs-12 col-lg-8">
 				<% end %>
-
-				<% unless @menu_setting.nil? %>
-				<% if @ad && @menu_setting.ad_position_id==2 %>
-				<%= render :partial => 'layouts/ad' %>
-				<% end %>
-				<% end %>
-
 				<%=yield %>
-
-				<% unless	@menu_setting.nil? %>
-				<% if @ad && @menu_setting.ad_position_id==3 %>
-				<%= render :partial => 'layouts/ad' %>
-				<% end %>
-				<% end %>
-
 				</div>
 				<%= render :partial => 'layouts/aside' %>
 			</div>
@@ -67,18 +52,5 @@
 	<%= render :partial => 'layouts/footer' %>
 	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
 	<%= javascript_include_tag @script, "data-turbolinks-track" => true %>
-	<script>
-		var loadDeferredStyles = function() {
-			var addStylesNode = document.getElementById("deferred-styles");
-			var replacement = document.createElement("div");
-			replacement.innerHTML = addStylesNode.textContent;
-			document.body.appendChild(replacement)
-			addStylesNode.parentElement.removeChild(addStylesNode);
-		};
-		var raf = requestAnimationFrame || mozRequestAnimationFrame ||
-				webkitRequestAnimationFrame || msRequestAnimationFrame;
-		if (raf) raf(function() { window.setTimeout(loadDeferredStyles, 0); });
-		else window.addEventListener('load', loadDeferredStyles);
-	</script>
 </body>
 </html>
