--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -91,7 +91,9 @@ header #top_menu li {float:left;margin:0 15px 0 0;padding:0}
 #sl_program_index article {background:#e7e7e7;border-radius:10px;margin:20px 0;padding:20px}
 
 /* footer */
+footer {position:relative}
 footer address {margin-top:10px }
+footer form {position:absolute;top:10px;right:10px}
 
 /* intro */
 #sl_intro_index h3 {margin-bottom:40px;text-indent:0}
