--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,11 @@
 <footer id="footer" class="footer">
 	<div class="container">
-		<address>CopyLeft. 2012, SL. All wrongs reserved.&nbsp;&nbsp; <br class="visible-xs" />주소 : 아프리카 사자굴 &nbsp;&nbsp;</address>
- 	</div>	
+		<div class="row">
+			<address class="col-xs-12">CopyLeft. 2012, SL. All wrongs reserved.&nbsp;&nbsp; <br class="visible-xs" />주소 : 아프리카 사자굴 &nbsp;&nbsp;</address>
+			<%=form_tag root_path,:method=>'get' do %>
+			<%=select_tag 'locale',options_for_select(@language) %>
+			<%=submit_tag t(:change_language) %>
+			<% end %>
+		</div>
+ 	</div>
 </footer>
