--- a/app/views/blogs/_index.html.erb
+++ b/app/views/blogs/_index.html.erb
@@ -4,9 +4,9 @@
   <ul>
     <% @blogs.each_with_index do |blog,index| %>
     <li <% if index==5 %>class="nm"<% else %><% if index==2 %>class="m_nm"<% end %><% end %>>
-    	<%=link_to image_tag(asset_path('ajax-loader.gif'),:width=>100,:height=>100,:alt=>blog.title,:'data-original'=>sl_get_thumb(blog[:photo_url],'small_thumb'),:class=>'lazy'),blog_path(blog),:title=>blog.title %>
+    	<%=link_to image_tag(asset_path('ajax-loader.gif'),:width=>100,:height=>100,:alt=>blog.title,:'data-original'=>sl_get_thumb(blog[:photo_url],'small'),:class=>'lazy'),blog_path(blog),:title=>blog.title %>
 			<noscript>
-				<%=link_to image_tag(sl_get_thumb(blog[:photo_url],'small_thumb'),:width=>100,:height=>100,:alt=>blog.title),blog_path(blog),:title=>blog.title %>
+				<%=link_to image_tag(sl_get_thumb(blog[:photo_url],'small'),:width=>100,:height=>100,:alt=>blog.title),blog_path(blog),:title=>blog.title %>
 			</noscript>
     </li>
   	<% end %>
