--- a/app/views/galleries/_gallery.html.erb
+++ b/app/views/galleries/_gallery.html.erb
@@ -19,7 +19,7 @@
 	<% if @gallery %>
 	<div id="sl_gallery_left">
 		<span class="none" itemprop="genre"><%= @gallery.gallery_category_id %></span>
-		<%=link_to @gallery.photo.url,{:title=>@gallery.title,:class=>'simple_image'} do %>
+		<%=link_to @gallery[:photo_url],{:title=>@gallery.title,:class=>'simple_image'} do %>
 		<figure>
 			<%= image_tag sl_get_thumb(@gallery[:photo_url],'large'),:class=>'img-responsive',:itemprop=>"contentURL" %>
 			<figcaption id="gallery<%= @gallery.id %>_img<%= @gallery.id %>_span" class="image_caption" itemprop="name">
@@ -59,7 +59,7 @@
 				<% if(index2>=5) then g_class='nm' else g_class='' end %>
 				<%= link_to image_tag(asset_path('ajax-loader.gif'),:width=>100,:height=>100,:alt=>gallery.title,:'data-original'=>sl_get_thumb(gallery[:photo_url],'small'),:class=>'lazy'),gallery_path(gallery),:class=>g_class %>
 				<noscript>
-					<%= link_to image_tag(sl_get_thumb(gallery[:photo_url],'small_thumb'),:width=>100,:height=>100,:alt=>gallery.title),gallery_path(gallery),:title=>gallery.title %><% if gallery.id==@gallery.id %><span class="none" itemprop="thumbnailUrl"><%= gallery.photo.small_thumb %></span><% end %>
+					<%= link_to image_tag(sl_get_thumb(gallery[:photo_url],'small'),:width=>100,:height=>100,:alt=>gallery.title),gallery_path(gallery),:title=>gallery.title %><% if gallery.id==@gallery.id %><span class="none" itemprop="thumbnailUrl"><%= sl_get_thumb(gallery[:photo_url],'small') %></span><% end %>
 				</noscript>
 				<% end %>
 			</div>
