--- a/app/views/galleries/_index.html.erb
+++ b/app/views/galleries/_index.html.erb
@@ -1,4 +1,4 @@
-<article id="sl_main_gallery" class="sl_main_list col-xs-12 carousel slide" data-ride="carousel" itemscope itemtype="http://schema.org/ImageObject">
+<article id="sl_main_gallery" class="col-xs-12 carousel slide" data-ride="carousel" itemscope itemtype="http://schema.org/ImageObject">
 	<h3><%= t('activerecord.models.gallery') %></h3>
 
 	<% unless @galleries.empty? %>
@@ -12,12 +12,12 @@
 	<% unless @galleries.empty? %>
 	<div class="carousel-inner" role="listbox" style="clear:both">
 		<% @galleries.each_slice(6).each_with_index do |gallery,index| %>
-		<div class="item<% if index.zero? %> active<% end %>">
+		<div class="row item<% if index.zero? %> active<% end %>">
 			<% gallery.each_with_index do |gallery,index2| %>
-			<% if(index2==5) then g_class='nm' else if(index2==2) then g_class='m_nm' else g_class='' end %>
-			<%= link_to image_tag(asset_path('ajax-loader.gif'),:width=>100,:height=>100,:alt=>gallery.title,:'data-original'=>sl_get_thumb(gallery[:photo_url],'small'),:class=>'lazy'),gallery_path(gallery),:class=>g_class %>
+			<% if(index2==6) then g_class='nm' else if(index2==2) then g_class=' m_nm' else g_class='' end %>
+			<%= link_to image_tag(asset_path('ajax-loader.gif'),:alt=>gallery.title,:'data-original'=>sl_get_thumb(gallery[:photo_url],'medium'),:class=>'lazy'),gallery_path(gallery),:class=>"col-md-2#{g_class}" %>
 			<noscript>
-				<%= link_to image_tag(sl_get_thumb(gallery[:photo_url],'small'),:width=>100,:height=>100,:alt=>gallery.title),gallery_path(gallery),:title=>gallery.title %>
+				<%= link_to image_tag(sl_get_thumb(gallery[:photo_url],'medium'),:width=>200,:height=>200,:alt=>gallery.title),gallery_path(gallery),:title=>gallery.title %>
 			</noscript>
 			<% end %>
 			<% end %>
