--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,10 +34,10 @@
 					<h2><%=raw t(:home_main_title) %></h2>
 					<p class="lead"><%=raw t(:home_main_description) %></p>
 					<%=link_to '깨끗한 웹을 꿈꾸고 있습니다','/home/popup',:class=>'modal_link btn btn-large btn-success',:'data-toggle'=>"modal",:'data-target'=>"#myModal" %>
-				</div
+				</div>
 				<hr class="none">
 				<div class="row">
-				<div class="sub_main col-xs-12 col-lg-8">
+				<div id="main_main" class="sub_main col-xs-12 col-lg-8">
 				<% else %>
 				<%= render :partial => 'layouts/page_header' %>
 				<div class="row">
