수정함:        Gemfile 	수정함:        Gemfile.lock 	수정함:        app/assets/stylesheets/application.scss 	수정함:        app/controllers/home_controller.rb 	수정함:        app/models/blog.rb 	수정함:        app/models/blog_category.rb 	수정함:        app/models/blog_content.rb 	수정함:        app/models/gallery.rb 	수정함:        app/models/gallery_category.rb 	수정함:        app/views/galleries/_gallery.html.erb

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -124,8 +124,8 @@ footer form {position:absolute;top:10px;right:10px}
 #sl_main_gallery .carousel-inner a {display:block}
 #sl_main_gallery .carousel-inner a.nm  {margin-right:0}
 #sl_main_gallery .carousel-control {width:20px;color:#999}
-#sl_main_gallery .carousel-control.left {display:block;background:none;left:-30px}
-#sl_main_gallery .carousel-control.right {display:block;background:none;right:-30px}
+#sl_main_gallery .carousel-control.left {display:block;background:none;left:-30px;z-index:9}
+#sl_main_gallery .carousel-control.right {display:block;background:none;right:-30px;z-index:9}
 #sl_main_gallery .carousel-indicators {bottom:-40px}
 #sl_main_gallery .carousel-indicators li {border-color:#ccc}
 #sl_main_gallery .carousel-indicators .active {background:#ccc}
