수정함:        app/assets/javascripts/application.js 	수정함:        app/assets/stylesheets/application.scss 	수정함:        app/controllers/application_controller.rb 	수정함:        app/controllers/tags_controller.rb 	수정함:        app/views/blog_categories/_aside.html.erb 	수정함:        app/views/blogs/_tag_cloud.html.erb 	수정함:        app/views/layouts/_aside.html.erb 	수정함:        app/views/layouts/_footer.html.erb 	수정함:        app/views/layouts/_header.html.erb 	수정함:        app/views/tags/index.html.erb 	수정함:        config/application.rb 	수정함:        config/locales/ko.yml

--- a/app/views/blogs/_tag_cloud.html.erb
+++ b/app/views/blogs/_tag_cloud.html.erb
@@ -1,14 +1,27 @@
-<div id="sl_tag_cloud">
-<div id="myCanvasContainer">
- <canvas width="350" height="350" id="myCanvas">
-  <p>Anything in here will be replaced on browsers that support the canvas element</p>
- </canvas>
-</div>
-<div id="tags">
-	<ul>
-	<% tag_cloud(@tags, %w(css1 css2 css3 css4)) do |tag, css_class| %>
-  	<li><%= link_to tag.name, tag_path(:tag => tag.name), :class => css_class %></li>
-	<% end %>
-	</ul>
-</div>
-</div>
+<article id="sl_tag_cloud" class="box sl_aside">
+    <div class="box_header">
+        <h2><%=t('activerecord.models.tag') %></h2>
+        <div class="box_icon">
+            <a href="#" class="btn_minimize">
+                <i class="glyphicon glyphicon-chevron-up"></i>
+            </a>
+            <a href="#" class="btn_close">
+                <i class="glyphicon glyphicon-remove"></i>
+            </a>
+        </div>
+    </div>
+    <div class="box_content">
+        <div id="myCanvasContainer">
+            <canvas width="350" height="350" id="myCanvas">
+                <p>Anything in here will be replaced on browsers that support the canvas element</p>
+            </canvas>
+        </div>
+        <div id="tags">
+            <ul>
+                <% tag_cloud(@tags, %w(css1 css2 css3 css4)) do |tag, css_class| %>
+                <li><%= link_to tag.name, tag_path(:tag => tag.name), :class => css_class %></li>
+                <% end %>
+            </ul>
+        </div>
+    </div>
+</article
