--- a/app/views/layouts/_aside.html.erb
+++ b/app/views/layouts/_aside.html.erb
@@ -1,7 +1,7 @@
 <aside class="visible-lg visible-xl pull-right col-lg-4">
-  <%= render :partial => 'blog_categories/aside' %>
+  <%= render 'blog_categories/aside' %>
 	<% unless @tags.empty? %>
-	<%= render :partial => 'blogs/tag_cloud' %>
+	<%= render 'blogs/tag_cloud' %>
 	<% end %>
 	<div class="clearfix"></div>
 </aside>
