--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,7 +40,7 @@ footer div {margin:0.3em 0 0}
 .page-header .breadcrumb  {float:right;margin:0}
 .alert-success {clear:both}
 #sl_ad {clear:both;margin-bottom:10px}
-#sl_tag_cloud {position:relative;float:left;width:100%;margin-bottom:100px;border:1px solid #ccc}
+#sl_tag_cloud {position:relative;float:left;width:100%;margin-bottom:100px}
 #tags {float:left;width:100%}
 .css1 { font-size: 15px; color:orange}
 .css2 { font-size: 20px; color:#333}
@@ -79,11 +79,12 @@ header #top_menu li {float:left;margin:0 15px 0 0;padding:0}
 
 /* aside */
 
+#myCanvas {width:100%}
 #tags ul {margin:0;padding:0;list-style:none}
 #tags ul li {float:left;margin:0 10px}
 
 
-.jumbotron h2 {font-size:60px}
+.jumbotron h2 {font-size:3em}
 
 /* */
 #sl_blog_categories ul li.active a {font-weight:bold}
