--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
 			<h1><%= link_to t(:home_title),root_path %></h1>
 			<% if user_signed_in? %>
 			<ul id="top_menu">
-				<li><%= link_to current_user.name,edit_user_registration_path %><%= t(:welcome)%></li>
+				<li><%= link_to current_user.nickname,edit_user_registration_path %><%= t(:welcome)%></li>
 				<li><%= link_to t(:logout),destroy_user_session_path %></li>
 			</ul>
 			<% end %>
