수정함:        Gemfile 	수정함:        Gemfile.lock 	수정함:        app/helpers/application_helper.rb 	수정함:        app/uploaders/blog_uploader.rb 	수정함:        app/uploaders/gallery_uploader.rb 	수정함:        app/views/blogs/_index.html.erb 	수정함:        app/views/galleries/_index.html.erb 	수정함:        config/initializers/carrierwave.rb

--- a/app/views/galleries/_index.html.erb
+++ b/app/views/galleries/_index.html.erb
@@ -15,9 +15,9 @@
 		<div class="row item<% if index.zero? %> active<% end %>">
 			<% gallery.each_with_index do |gallery,index2| %>
 			<% if(index2==6) then g_class='nm' else if(index2==2) then g_class=' m_nm' else g_class='' end %>
-			<%= link_to image_tag(asset_path('ajax-loader.gif'),:alt=>gallery.title,:'data-original'=>sl_get_thumb(gallery[:photo_url],'medium'),:class=>'lazy'),gallery_path(gallery),:class=>"col-md-2#{g_class}" %>
+			<%= link_to image_tag(asset_path('ajax-loader.gif'),:alt=>gallery.title,:'data-original'=>sl_get_thumb(gallery.photo.to_s,'medium'),:class=>'lazy'),gallery_path(gallery),:class=>"col-md-2#{g_class}" %>
 			<noscript>
-				<%= link_to image_tag(sl_get_thumb(gallery[:photo_url],'medium'),:width=>200,:height=>200,:alt=>gallery.title),gallery_path(gallery),:title=>gallery.title %>
+				<%= link_to image_tag(sl_get_thumb(gallery.photo.to_s,'medium'),:width=>200,:height=>200,:alt=>gallery.title),gallery_path(gallery),:title=>gallery.title %>
 			</noscript>
 			<% end %>
 			<% end %>
