수정함:        app/assets/javascripts/application.js 	수정함:        app/assets/javascripts/galleries/index.js 	수정함:        app/assets/stylesheets/application.scss 	수정함:        app/controllers/admin/blogs_controller.rb 	수정함:        app/controllers/application_controller.rb 	수정함:        app/controllers/blogs_controller.rb 	수정함:        app/controllers/galleries_controller.rb 	수정함:        app/controllers/guest_books_controller.rb 	수정함:        app/controllers/home_controller.rb 	수정함:        app/controllers/intro_controller.rb 	수정함:        app/controllers/programs_controller.rb 	수정함:        app/controllers/questions_controller.rb 	수정함:        app/models/gallery.rb 	삭제함:        app/models/setting_controller.rb 	삭제함:        app/models/setting_controller_photo.rb 	수정함:        app/views/blogs/_index.html.erb 	수정함:        app/views/blogs/index_default.html.erb 	수정함:        app/views/galleries/_gallery.html.erb 	수정함:        app/views/galleries/_index.html.erb 	수정함:        app/views/programs/index.html.erb 	수정함:        config/initializers/carrierwave.rb 	수정함:        db/migrate/20120516002154_create_devise_to_users.rb 	삭제함:        db/migrate/20130101002147_create_ad_positions.rb 	삭제함:        db/migrate/20130101002148_create_settings.rb 	삭제함:        db/migrate/20130101002149_create_setting_controller_photos.rb 	수정함:        db/migrate/20161216002146_create_program_categories.rb 	수정함:        db/migrate/20161216002148_create_programs.rb 	삭제함:        db/migrate/20170216005321_create_program_categories_programs.rb 	수정함:        db/seeds.rb

--- a/app/views/blogs/_index.html.erb
+++ b/app/views/blogs/_index.html.erb
@@ -4,9 +4,9 @@
   <ul class="row">
     <% @blogs.each_with_index do |blog,index| %>
     <li class="col-md-2<% if index==5 %> nm<% else %><% if index==2 %> m_nm<% end %><% end %>">
-    	<%=link_to image_tag(asset_path('ajax-loader.gif'),:alt=>blog.title,:'data-original'=>sl_get_thumb(blog.photo.to_s,'medium'),:class=>'lazy'),blog_path(blog),:title=>blog.title %>
+    	<%=link_to image_tag(asset_path('ajax-loader.gif'),:alt=>blog.title,:'data-original'=>sl_get_thumb(blog.photo.to_s,'medium'),:class=>'lazy img-responsive'),blog_path(blog),:title=>blog.title %>
 			<noscript>
-				<%=link_to image_tag(sl_get_thumb(blog.photo.to_s,'medium'),:width=>200,:height=>200,:alt=>blog.title),blog_path(blog),:title=>blog.title %>
+				<%=link_to image_tag(sl_get_thumb(blog.photo.to_s,'medium'),:alt=>blog.title,:class=>'img-responsive'),blog_path(blog),:title=>blog.title %>
 			</noscript>
     </li>
   	<% end %>
