--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -99,7 +99,6 @@ footer form {position:absolute;top:10px;right:10px}
 /* intro */
 #sl_intro_index h3 {margin-bottom:40px;text-indent:0}
 #sl_intro_index #intro_main_content {float:left;width:100%;margin:0 0 20px}
-#sl_intro_index #sl_intro_left {float:left;width:400px}
 #sl_intro_index #sl_intro_right {float:right;position:relative}
 #sl_intro_index #sl_intro_right dl {float:left;width:100%;margin:0 0 10px;padding:0}
 #sl_intro_index #sl_intro_right dt {clear:both;float:left;margin:5px 0;width:100px;}
@@ -111,17 +110,16 @@ footer form {position:absolute;top:10px;right:10px}
 /* gallery */
 #sl_gallery_index {float:left;width:100%;margin:10px 0}
 #sl_gallery_index ol.nav-tabs {margin:0 0 10px}
-#sl_gallery {float:left;width:100%;margin:20px 0}
 #gallery_main_content {float:left;width:100%;margin:0 0 20px}
 #sl_gallery_left {float:left;position:relative;overflow:hidden}
-#sl_gallery_left figure figcaption {position:absolute;display:block;bottom:0px;padding:5px 0;text-align:center;color:#fff;width:100%;background:#333;opacity:0.8}
-#sl_gallery_right {float:left;margin:0 0 0 20px;position:relative;width:300px}
+#sl_gallery_left figure {position:relative;}
+#sl_gallery_left figure figcaption {position:absolute;display:block;bottom:0px;padding:5px 0;margin:0;text-align:center;color:#fff;width:100%;background:#333;opacity:0.8}
 #sl_gallery_right h4 {margin:0 0 10px;padding:0}
 #sl_gallery_right div.text {margin:0 0 20px;line-height:170%}
 #sl_gallery_right div.text p {margin:0;padding:0}
 #sl_gallery_right div.add_info {color:#999}
 /* gallery slide */
-#sl_main_gallery {float:left;width:100%;margin:30px 0}
+#sl_main_gallery {float:left;width:100%;margin-top:30px;margin-bottom:30px}
 #sl_main_gallery .carousel-inner a {display:block}
 #sl_main_gallery .carousel-inner a.nm  {margin-right:0}
 #sl_main_gallery .carousel-control {width:20px;color:#999}
@@ -140,6 +138,9 @@ footer form {position:absolute;top:10px;right:10px}
 #sl_blog_index ol.nav-tabs {margin:0 0 10px}
 #sl_blog {float:left;width:100%;margin:20px 0}
 #sl_blog_index .media {border-bottom:1px dotted #ccc;padding-bottom:10px;margin-bottom:20px}
+#sl_blog_index .media .tags a {color:#999 }
+#sl_blog_index .media .tags a:hover {color:#333}
+
 
 /* Main Common*/
 #main_main section {margin:0 0 3em;padding:0}
