--- a/app/views/galleries/_gallery.html.erb
+++ b/app/views/galleries/_gallery.html.erb
@@ -1,6 +1,3 @@
-<% if @menu_setting.use_category %>
-<input id="image_url" type="hidden" value="http://slboard.cdn3.cafe24.com" />
-<input id="gallery_model" type="hidden" value="gallery" />
 <ol class="nav nav-tabs sl_categories">
 	<% unless @gallery_categories.empty? %>
 	<% @gallery_categories.each do |gallery_category| %>
@@ -16,21 +13,20 @@
 	</li>
 	<% end %>
 </ol>
-<% end %>
-<div id="sl_gallery" <% if @gallery %>itemscope itemtype="http://schema.org/ImageObject"<% end %>>
+<div id="sl_gallery" class="row" <% if @gallery %>itemscope itemtype="http://schema.org/ImageObject"<% end %> >
 	<% if @gallery %>
-	<div id="sl_gallery_left">
+	<div id="sl_gallery_left" class="col-xs-12 col-md-6 col-xl-5">
 		<span class="none" itemprop="genre"><%= @gallery.gallery_category_id %></span>
-		<%=link_to @gallery[:photo_url],{:title=>@gallery.title,:class=>'simple_image'} do %>
+		<%=link_to @gallery.photo.to_s,{:title=>@gallery.title,:class=>'simple_image'} do %>
 		<figure>
-			<%= image_tag sl_get_thumb(@gallery[:photo_url],'large'),:class=>'img-responsive',:itemprop=>"contentURL" %>
+			<%= image_tag sl_get_thumb(@gallery.photo.to_s,'large'),:class=>'img-responsive',:itemprop=>"contentURL" %>
 			<figcaption id="gallery<%= @gallery.id %>_img<%= @gallery.id %>_span" class="image_caption" itemprop="name">
 				<%= @gallery.title %>
 			</figcaption>
 		</figure>
 		<% end %>
 	</div>
-	<div id="sl_gallery_right">
+	<div id="sl_gallery_right" class="col-xs-12 col-md-6 col-xl-7">
 		<div itemprop="description">
 			<%= simple_format @gallery.content %>
 		</div>
@@ -54,14 +50,14 @@
 		<% end %>
 
 		<% unless @galleries.empty? %>
-		<div class="carousel-inner" role="listbox" style="clear:both">
+		<div class="carousel-inner col-xs-12" role="listbox" style="clear:both">
 			<% @galleries.each_slice(6).each_with_index do |gallery,index| %>
 			<div class="row item<% if index.zero? %> active<% end %>">
 				<% gallery.each_with_index do |gallery,index2| %>
 				<% if(index2>=5) then g_class=' nm' else g_class='' end %>
-				<%= link_to image_tag(asset_path('ajax-loader.gif'),:alt=>gallery.title,:'data-original'=>sl_get_thumb(gallery[:photo_url],'medium'),:class=>'lazy'),gallery_path(gallery),:class=>"col-md-2#{g_class}" %>
+				<%= link_to image_tag(asset_path('ajax-loader.gif'),:alt=>gallery.title,:'data-original'=>sl_get_thumb(gallery.photo.to_s,'medium'),:class=>'lazy'),gallery_path(gallery),:class=>"col-md-2#{g_class}" %>
 				<noscript>
-					<%= link_to image_tag(sl_get_thumb(gallery[:photo_url],'medium'),:alt=>gallery.title),gallery_path(gallery),:title=>gallery.title %><% if gallery.id==@gallery.id %><span class="none" itemprop="thumbnailUrl"><%= sl_get_thumb(gallery[:photo_url],'small') %></span><% end %>
+					<%= link_to image_tag(sl_get_thumb(gallery.photo.to_s,'medium'),:alt=>gallery.title),gallery_path(gallery),:title=>gallery.title %><% if gallery.id==@gallery.id %><span class="none" itemprop="thumbnailUrl"><%= sl_get_thumb(gallery.photo.to_s,'small') %></span><% end %>
 				</noscript>
 				<% end %>
 			</div>
@@ -79,7 +75,7 @@
 		<% if @galleries.count > 6 %>
 		<a class="left carousel-control" href="#sl_main_gallery" role="button" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> <span class="sr-only">Previous</span> </a>
 		<a class="right carousel-control" href="#sl_main_gallery" role="button" data-slide="next"> <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> <span class="sr-only">Next</span> </a>
-		<% end %>		
+		<% end %>
 	</div>
 
 	<div id="sl_bottom_menu">
