수정함:        Gemfile 	수정함:        Gemfile.lock 	수정함:        app/assets/stylesheets/application.scss 	수정함:        app/controllers/blogs_controller.rb 	수정함:        app/views/questions/index.html.erb 	수정함:        config/initializers/ar_innodb_row_format.rb 	수정함:        config/sitemap.rb

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -23,7 +23,7 @@
 				<% @questions.each do |question| %>
 				<tr>
 					<td class="sl_t_name"><%=userName(question,10) %></td>
-					<td class="sl_t_title"><%=checkPrivLink(question) %> &nbsp; <% if(question.secret?) %><%=image_tag('/assets/board/lock.png') %><% end %></td>
+					<td class="sl_t_title"><%=checkPrivLink(question) %> &nbsp; <% if(question.secret?) %><%=image_tag('lock.png') %><% end %></td>
 					<td class="sl_t_count"><% if question.question_comments_count? %><%=t(:answer) %><% else %><%=t(:no_answer) %><% end %></td>
 					<td class="sl_t_count"><%=question.count+question.impressionist_count(:filter=>:ip_address) %></td>
 					<td class="sl_t_created_at"><%=question.created_at.to_date %></td>
