--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,8 +44,8 @@ footer div {margin:0.3em 0 0}
 #tags {float:left;width:100%}
 .css1 { font-size: 15px; color:orange}
 .css2 { font-size: 20px; color:#333}
-.css3 { font-size: 30px; color:blue; }
-.css4 { font-size: 45px; color:red;}
+.css3 { font-size: 30px; color:blue}
+.css4 { font-size: 45px; color:red}
 
 /* Common Class */
 .arial {font-family:Arial}
@@ -78,7 +78,6 @@ header #top_menu {position:absolute;right:10px;top:5px;margin:0;padding:0;list-s
 header #top_menu li {float:left;margin:0 15px 0 0;padding:0}
 
 /* aside */
-
 #myCanvas {width:100%}
 #tags ul {margin:0;padding:0;list-style:none}
 #tags ul li {float:left;margin:0 10px}
@@ -371,7 +370,6 @@ a.left:active {background-position: -60px 0}
 	.sl_content_tags ul li:last-child:after {content:none}
 }
 
-
 @media (min-width: 1200px) and (max-width: 1499px) {
 
 }
@@ -392,8 +390,6 @@ a.left:active {background-position: -60px 0}
   .visible-xl{
       display: none !important;
   }
-
-
 
     .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12 {
         float: left;
