수정함:        app/controllers/admin/admin_controller.rb 	수정함:        app/controllers/admin/blogs_controller.rb 	수정함:        app/controllers/admin/contacts_controller.rb 	수정함:        app/controllers/admin/galleries_controller.rb 	삭제함:        app/controllers/admin/intro_controller.rb 	수정함:        app/controllers/admin/notices_controller.rb 	삭제함:        app/controllers/admin/portfolios_controller.rb 	삭제함:        app/controllers/admin/resources_controller.rb 	삭제함:        app/views/admin/histories/_form.html.erb 	삭제함:        app/views/admin/histories/edit.html.erb 	삭제함:        app/views/admin/histories/index.html.erb 	삭제함:        app/views/admin/histories/new.html.erb 	삭제함:        app/views/admin/histories/show.html.erb 	삭제함:        app/views/admin/home/edit.html.erb 	삭제함:        app/views/admin/home/index.html.erb 	삭제함:        app/views/admin/home/new.html.erb 	삭제함:        app/views/admin/intro/_form.html.erb 	삭제함:        app/views/admin/intro/edit.html.erb 	삭제함:        app/views/admin/intro/index.html.erb 	삭제함:        app/views/admin/intro/new.html.erb 	삭제함:        app/views/admin/intro/show.html.erb 	삭제함:        app/views/admin/portfolios/_form.html.erb 	삭제함:        app/views/admin/portfolios/edit.html.erb 	삭제함:        app/views/admin/portfolios/index.html.erb 	삭제함:        app/views/admin/portfolios/new.html.erb 	삭제함:        app/views/admin/portfolios/show.html.erb 	삭제함:        app/views/admin/resources/_form.html.erb 	삭제함:        app/views/admin/resources/edit.html.erb 	삭제함:        app/views/admin/resources/index.html.erb 	삭제함:        app/views/admin/resources/new.html.erb 	삭제함:        app/views/admin/resources/show.html.erb 	수정함:        app/views/layouts/_ad.html.erb 	수정함:        app/views/layouts/_aside.html.erb 	수정함:        config/locales/ko.yml

--- a/app/views/layouts/_aside.html.erb
+++ b/app/views/layouts/_aside.html.erb
@@ -3,5 +3,6 @@
 	<% unless @tags.empty? %>
 	<%= render 'blogs/tag_cloud' %>
 	<% end %>
+	<%= render 'ad' %>  
 	<div class="clearfix"></div>
 </aside>
